fix: carriage overflow

--- a/src/app/admin/components/carriage/carriage.component.scss
+++ b/src/app/admin/components/carriage/carriage.component.scss
@@ -14,12 +14,11 @@
 }
 
 .car-bottom {
-  overflow: scroll;
   display: flex;
 
   max-width: 90dvw;
   min-height: 14rem;
-  padding: 1rem 2rem;
+  padding: 0 2rem 1rem;
 
   border: $three solid $gray-200;
   border-radius: 2rem;
@@ -33,6 +32,7 @@
 
   width: 100%;
   max-height: 20rem;
+  padding-top: 1rem;
 }
 
 .title {
